# patchman

./: .buildinfo  .clang-format  .gitignore  3rd_party.html  CMakeLists.txt  CMakePresets.json  README.md  browser.html  editor.html  first_time.html  genindex.html  index.html  objects.inv  reports.html  search.html  searchindex.js  update_qtbase_overlay.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docs.yml  main.yml
_sources/: browser.rst  editor.rst  reports.rst
_static/: appcast.xml  documentation_options.js
doc/: .gitignore  3rd_party.rst  CMakeLists.txt  browser.rst  conf.py  editor.rst  first_time.rst  index.rst  requirements.txt
doc/_static/: .gitignore
include/patchlib/: BinLoader.h  D192.h  Enr.h  Exceptions.h  Phase.h  Rack.h  Rom.h
install/: CMakeLists.txt  patchman.desktop  sign_installer.cmake
resources/: dsa_pub.pem  resources.qrc
resources/icons/: icons.qrc
resources/icons/patchman-dark/: index.theme
resources/icons/patchman-light/: index.theme
resources/reports/: address_table.html  d192.html  enr.html  report_base.html  reports.qrc
scripts/: .gitignore  appcast.py  qhcp.py  requirements.txt
src/: CMakeLists.txt  patchman_config.h.in
src/patchlib/: BinLoader.cpp  CMakeLists.txt  D192.cpp  Enr.cpp  Rack.cpp  Rom.cpp
src/patchman/: AboutDialog.cpp  AboutDialog.h  AutoNumberDialog.cpp  AutoNumberDialog.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  DarkModeHandler.cpp  DarkModeHandler.h  EditorWindow.cpp  EditorWindow.h  MainWindow.cpp  MainWindow.h  RackEditor.cpp  RackEditor.h  RackModel.cpp  RackModel.h  RackPreview.cpp  RackPreview.h  RecentDocument.cpp  RecentDocument.h  ReportBuilder.cpp  ReportBuilder.h  RomEditor.cpp  RomEditor.h  RomLibraryModel.cpp  RomLibraryModel.h  Settings.h  SettingsDialog.cpp  SettingsDialog.h  ShowDuplicatesDialog.cpp  ShowDuplicatesDialog.h  help.h  main.cpp  patchman.rc  qiconFromTheme.cpp  qiconFromTheme.h  showPathInFileBrowser.h  updater.h  updater_nop.cpp  (+2 more)
src/patchman/d192/: D192PatchModel.cpp  D192RackEditor.cpp  D192RackEditor.h  D192RackModel.cpp  D192RackModel.h  D192RackPreview.cpp  D192RackPreview.h  D192ReportBuilder.cpp  D192ReportBuilder.h
src/patchman/enr/: EnrRackEditor.cpp  EnrRackEditor.h  EnrRackModel.cpp  EnrRackModel.h  EnrRackPreview.cpp  EnrRackPreview.h  EnrReportBuilder.cpp  EnrReportBuilder.h
test/: CMakeLists.txt
test/patchlib/: BinLoaderTest.cpp  CMakeLists.txt  D192Test.cpp  EnrTest.cpp  Formatters.cpp  Formatters.h  RomLibraryTest.cpp  main.cpp
translations/: patchman_en.ts
vcpkg/overlays/qtbase/: vcpkg.json
